--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-dropzone": "^14.3.8",
     "reactflow": "^11.11.4",
     "tailwind-merge": "^3.4.0"
   },
