--- a/package.json
+++ b/package.json
@@ -11,16 +11,24 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
     "@xyflow/react": "^12.9.3",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "label": "^0.2.2",
     "lucide-react": "^0.555.0",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "reactflow": "^11.11.4",
-    "tailwind-merge": "^3.4.0"
+    "scrollarea": "^1.0.0",
+    "switch": "^0.0.0",
+    "tailwind-merge": "^3.4.0",
+    "textarea": "^0.3.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
